--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,35 +25,37 @@ dependencies:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   #for fonts and text related
-  google_fonts: ^1.1.1
-  auto_size_text: ^2.1.0
-  marquee: ^1.6.1
+  google_fonts:
+  auto_size_text:
+  marquee:
   #for circular slider
-  flutter_circular_slider: ^2.5.0
+  flutter_circular_slider:
   #icon package
-  eva_icons_flutter: ^2.0.1
-  material_design_icons_flutter: ^4.0.5755
+  eva_icons_flutter:
+  material_design_icons_flutter:
   #for playing audio
-  audioplayers:
+  audioplayers: ^0.20.0
   #for image picking
-  image_picker: ^0.6.7+21
+  image_picker:
   #facebook login
-  flutter_facebook_login: ^3.0.0
+  flutter_facebook_login:
   #google signin plugins
-  firebase_auth: ^0.18.4+1
-  google_sign_in: ^4.4.4
+  firebase_auth:
+  google_sign_in:
   #state management
   path_provider:
   #firebase servcies
-  firebase_core: ^0.5.3
-  cloud_firestore: ^0.14.4
-  firebase_storage: ^5.2.0
+  firebase_core:
+  cloud_firestore:
+  firebase_storage:
+  #for loading design
+  modal_progress_hud_nsn: ^0.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
