--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dev_dependencies:
   cloud_firestore:
   firebase_storage:
   #for loading design
-  modal_progress_hud_nsn: ^0.3.0
+  modal_progress_hud_nsn:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
