--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,8 @@ dev_dependencies:
   firebase_core:
   cloud_firestore:
   firebase_storage:
-  #for loading design
+  #for loading design'
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-0
   #modal_progress_hud_nsn: ^0.2.1
 
 # For information on the generic Dart part of this file, see the
