--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dev_dependencies:
   modal_progress_hud_nsn: ^0.1.0-nullsafety-0
   #for cached images
   cached_network_image: ^3.0.0
+  #for http requests
+  http: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
